# arrow-with-bazel

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  main.cc
.github/workflows/: bazel-run-demo.yaml  build-with-bazel.yaml
patches/: arrow_add_bazel.patch  arrow_fix_includes.patch
