module(
    name = "arrow_with_bazel",
    version = "0.0.1",
)

bazel_dep(name = "arrow", version = "21.0.0")
archive_override(
    module_name = "arrow",
    patch_args = [
        "-p1",
        "-N",
    ],
    patches = [
        "@//:patches/fix.patch",
        "@//:patches/new.patch",
    ],
    sha256 = "5d3f8db7e72fb9f65f4785b7a1634522e8d8e9657a445af53d4a34a3849857b5",
    strip_prefix = "apache-arrow-21.0.0",
    url = "https://github.com/apache/arrow/releases/download/apache-arrow-21.0.0/apache-arrow-21.0.0.tar.gz",
)

bazel_dep(name = "boost.multiprecision", version = "1.88.0.bcr.1")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20241007")
bazel_dep(name = "thrift", version = "0.22.0")
archive_override(
    module_name = "thrift",
    patch_args = [
        "-p1",
        "-N",
    ],
    patches = ["@//:third_party/thrift-0.22.0-module.patch"],
    sha256 = "c4649c5879dd56c88f1e7a1c03e0fbfcc3b2a2872fb81616bffba5aa8a225a37",
    strip_prefix = "thrift-0.22.0",
    url = "https://github.com/apache/thrift/archive/refs/tags/v0.22.0.tar.gz",
)

bazel_dep(name = "re2", version = "2025-08-12")
bazel_dep(name = "snappy", version = "1.2.2")
bazel_dep(name = "xsimd", version = "13.2.0")
archive_override(
    module_name = "xsimd",
    patch_args = [
        "-p1",
        "-N",
    ],
    patches = ["@//:third_party/xsimd-13.2.0-module.patch"],
    sha256 = "edd8cd3d548c185adc70321c53c36df41abe64c1fe2c67bc6d93c3ecda82447a",
    strip_prefix = "xsimd-13.2.0",
    url = "https://github.com/xtensor-stack/xsimd/archive/refs/tags/13.2.0.tar.gz",
)

bazel_dep(name = "protobuf", version = "32.1")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.6.0")
bazel_dep(name = "opentelemetry-cpp", version = "1.19.0")
bazel_dep(name = "opentelemetry-proto", version = "1.7.0")

# Pin a newer version to avoid some bugs
bazel_dep(name = "grpc", version = "1.74.1")

bazel_dep(name = "substrait", version = "0.44.0")
archive_override(
    module_name = "substrait",
    patch_args = ["-p1"],
    patches = ["@//:third_party/substrait-0.44.0-module.patch"],
    sha256 = "f989a862f694e7dbb695925ddb7c4ce06aa6c51aca945105c075139aed7e55a2",
    strip_prefix = "substrait-0.44.0",
    url = "https://github.com/substrait-io/substrait/archive/refs/tags/v0.44.0.tar.gz",
)

bazel_dep(name = "jemalloc", version = "5.3.0-bcr.alpha.4")

# Pin the flatbuffers version, 24.3.6
bazel_dep(name = "flatbuffers", version = "24.3.6", repo_name = "com_github_google_flatbuffers")
archive_override(
    module_name = "flatbuffers",
    patch_args = ["-p1"],
    patches = ["@//:third_party/flatbuffers-24.3.6-module.patch"],
    sha256 = "5d8bfbf5b1b4c47f516e7673677f0e8db0efd32f262f7a14c3fd5ff67e2bd8fc",
    strip_prefix = "flatbuffers-24.3.6",
    url = "https://github.com/google/flatbuffers/archive/refs/tags/v24.3.6.tar.gz",
)

bazel_dep(name = "lz4", version = "1.10.0.bcr.1")
